--- a/index.html
+++ b/index.html
@@ -65,17 +65,17 @@
                 <div>
                     Carrozza
                     <br>
-                    <span id=""></span>
+                    <span id="stampa-codice-carrozza"></span>
                 </div>
                 <div>
                     Codice CP
                     <br>
-                    <span id=""></span>
+                    <span id="stampa-codice-cp"></span>
                 </div>
                 <div>
                     Costo Biglietto
                     <br>
-                    <span id=""></span>
+                    <span id="stampa-prezzo-biglietto"></span>
                 </div>
 
             </div>
